--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,10 @@ readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
     "gradio>=6.5.0",
+    "langchain>=1.2.8",
+    "langchain-community>=0.4.1",
     "langchain-openai>=1.1.7",
     "langgraph>=1.0.7",
     "openai-agents>=0.6.9",
+    "pytz>=2025.2",
 ]
