--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,9 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
+    "autogen>=0.10.5",
+    "autogen-agentchat>=0.7.5",
+    "autogen-ext>=0.7.5",
     "gradio>=6.5.0",
     "langchain>=1.2.8",
     "langchain-community>=0.4.1",
