--- a/crewai/calculator_example/src/calculator_example/config/tasks.yaml
+++ b/crewai/calculator_example/src/calculator_example/config/tasks.yaml
@@ -1,17 +1,21 @@
-research_task:
+multiplication_task:
   description: >
-    Conduct a thorough research about {topic}
-    Make sure you find any interesting and relevant information given
-    the current year is {current_year}.
+    mutliply the numbers {number1} and {number2} together accurately.
   expected_output: >
-    A list with 10 bullet points of the most relevant information about {topic}
-  agent: researcher
+    the result of the multiplication as a string showing the input numbers and the result
+  agent: multiplication_agent
+
+addition_task:
+  description: >
+    add numbers {number1} and {number2} together accurately.
+  expected_output: >
+    The result of the addition as a string showing the input numbers and the result
+  agent: addition_agent
 
 reporting_task:
   description: >
-    Review the context you got and expand each topic into a full section for a report.
-    Make sure the report is detailed and contains any and all relevant information.
+    Review the results from the maths operations and report the 
+    results of the calculations.
   expected_output: >
-    A fully fledged report with the main topics, each with a full section of information.
-    Formatted as markdown without '```'
-  agent: reporting_analyst
+    A clear and accurate report of the calculation results
+  agent: reporting_agent
